[gd_scene load_steps=22 format=3 uid="uid://s8nmrudluwr8"]

[ext_resource type="Script" path="res://Scripts/World/ArenaProps/Stomper.gd" id="1_oxjv2"]
[ext_resource type="Texture2D" uid="uid://cj4504smipj0y" path="res://Sprites/ArenaProps/StomperSprite.png" id="2_4y18w"]
[ext_resource type="Script" path="res://Scripts/CollisionDamage.gd" id="3_1tfar"]
[ext_resource type="PackedScene" uid="uid://cfoemwbbnhoxt" path="res://Scenes/Tools/health_manager.tscn" id="4_r5p63"]
[ext_resource type="PackedScene" uid="uid://b7lq6gjy6c3df" path="res://Scenes/Tools/hurtbox.tscn" id="5_k3lt4"]
[ext_resource type="Texture2D" uid="uid://bg33i5nj8f8lm" path="res://Sprites/ArenaProps/StomperButton.png" id="6_7o7xl"]
[ext_resource type="AudioStream" uid="uid://cx3dissqxi3tk" path="res://Audio/SoundEffects/ArenaProps/Stomper/StomperCountdownSound.wav" id="7_6boty"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y1amb"]
resource_local_to_scene = true
size = Vector2(128, 80)

[sub_resource type="NavigationPolygon" id="NavigationPolygon_m3juo"]
vertices = PackedVector2Array(64, -40, 64, 40, -64, 40, -64, -40)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-64, -40, -64, 40, 64, 40, 64, -40)])

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c58mh"]
size = Vector2(124, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oa5pf"]
size = Vector2(128, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_cgefy"]
atlas = ExtResource("6_7o7xl")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s31wu"]
atlas = ExtResource("6_7o7xl")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjnwk"]
atlas = ExtResource("6_7o7xl")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0vdw"]
atlas = ExtResource("6_7o7xl")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_md18b"]
atlas = ExtResource("6_7o7xl")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rxw3"]
atlas = ExtResource("6_7o7xl")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u02hv"]
atlas = ExtResource("6_7o7xl")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnwj3"]
atlas = ExtResource("6_7o7xl")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hduy"]
atlas = ExtResource("6_7o7xl")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_lhh32"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cgefy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s31wu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjnwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0vdw")
}],
"loop": false,
"name": &"close",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_md18b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rxw3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u02hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnwj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hduy")
}],
"loop": false,
"name": &"default",
"speed": 12.0
}]

[node name="Stomper" type="StaticBody2D" groups=["Solid"]]
position = Vector2(0, 184)
collision_layer = 4
script = ExtResource("1_oxjv2")
open_time = 4.0
cooldown_time = 50.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_y1amb")

[node name="Sprite" type="NinePatchRect" parent="."]
z_index = 11
offset_left = -64.0
offset_top = -40.0
offset_right = 64.0
offset_bottom = 40.0
texture = ExtResource("2_4y18w")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
z_index = 8
navigation_polygon = SubResource("NavigationPolygon_m3juo")
enabled = false

[node name="PlayerCollisionDamage" type="Node2D" parent="."]
script = ExtResource("3_1tfar")
damage = 999999.0
auto_monitor = false

[node name="Area2D" type="Area2D" parent="PlayerCollisionDamage"]
collision_layer = 0
monitorable = false
priority = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollisionDamage/Area2D"]
shape = SubResource("RectangleShape2D_c58mh")

[node name="Timer" type="Timer" parent="PlayerCollisionDamage/Area2D"]
wait_time = 0.2
one_shot = true

[node name="EnemyCollisionDamage" type="Node2D" parent="."]
script = ExtResource("3_1tfar")
damage = 999999.0
auto_monitor = false

[node name="Area2D" type="Area2D" parent="EnemyCollisionDamage"]
collision_layer = 0
collision_mask = 2
monitorable = false
priority = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyCollisionDamage/Area2D"]
shape = SubResource("RectangleShape2D_oa5pf")

[node name="Timer" type="Timer" parent="EnemyCollisionDamage/Area2D"]
wait_time = 0.2
one_shot = true

[node name="HealthManager" parent="." instance=ExtResource("4_r5p63")]
max_health = 99999.0

[node name="Buttons" type="Node2D" parent="."]
z_index = -1
z_as_relative = false
position = Vector2(0, -184)

[node name="Button1" type="Node2D" parent="Buttons"]
position = Vector2(-80, 152)

[node name="Hurtbox" parent="Buttons/Button1" node_paths=PackedStringArray("health_manager") instance=ExtResource("5_k3lt4")]
collision_layer = 2
collision_mask = 0
health_manager = NodePath("../../../HealthManager")

[node name="Sprite2D" type="AnimatedSprite2D" parent="Buttons/Button1"]
sprite_frames = SubResource("SpriteFrames_lhh32")
autoplay = "default"
frame = 4

[node name="Button2" type="Node2D" parent="Buttons"]
position = Vector2(80, 152)

[node name="Hurtbox" parent="Buttons/Button2" node_paths=PackedStringArray("health_manager") instance=ExtResource("5_k3lt4")]
collision_layer = 2
collision_mask = 0
health_manager = NodePath("../../../HealthManager")

[node name="Sprite2D" type="AnimatedSprite2D" parent="Buttons/Button2"]
sprite_frames = SubResource("SpriteFrames_lhh32")
autoplay = "default"
frame = 4

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CountdownPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_6boty")

[connection signal="area_entered" from="PlayerCollisionDamage/Area2D" to="PlayerCollisionDamage" method="_on_area_2d_area_entered" flags=18]
[connection signal="timeout" from="PlayerCollisionDamage/Area2D/Timer" to="PlayerCollisionDamage" method="_on_timer_timeout" flags=18]
[connection signal="area_entered" from="EnemyCollisionDamage/Area2D" to="EnemyCollisionDamage" method="_on_area_2d_area_entered" flags=18]
[connection signal="timeout" from="EnemyCollisionDamage/Area2D/Timer" to="EnemyCollisionDamage" method="_on_timer_timeout" flags=18]
[connection signal="health_updated" from="HealthManager" to="." method="_on_health_manager_health_updated"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
